Lighten active color, fix some dark mode bugs

--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -13,17 +13,19 @@ body {
   --content-primary: white;         // Primary content box color
   --content-secondary: #e9ecef;     // Secondary content box color, used for inactive nav-tabs
   --theme-light: #fcebebff;         // Light theme color, used for header backdrop
+  --active: #a51618;                // Active color, used for active sidebar components
 
   &.dark {
     color-scheme: dark;
     --primary: white;
-    --secondary: rgba(white, 0.54);
+    --secondary: rgba(255, 255, 255, 0.54);
     --tertiary: rgba(255, 255, 255, 0.1);
     --bg-primary: rgb(25, 25, 25);
     --bg-secondary: rgb(35, 35, 35);
     --content-primary: rgb(55, 55, 55);
     --content-secondary: rgb(47, 47, 47);
     --theme-light: rgba(255, 89, 76, 0.1);
+    --active: #ff594c;
   }
 
   color: var(--primary);
