--- a/client/src/scss/_reactstrap.scss
+++ b/client/src/scss/_reactstrap.scss
@@ -43,8 +43,12 @@
 // <Table>
 .table {
   //color: var(--primary);
-  * * {
-    border-color: var(--tertiary) !important;
+  * {
+    // Kills hover, but is necessary to prevent reactstrap's ugly default bg color for dark tables
+    background-color: var(--content-primary);
+    * {
+      border-color: var(--tertiary) !important;
+    }
   }
 }
 
