--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -3,11 +3,6 @@ $theme: #ff594c;
 $focus: rgba(255, 89, 76, 0.1);
 $active-back: rgba(255, 89, 76, 0.2);
 
-$theme-light: #fcebebff;
-$theme-dark: #a51618;
-
-$grey: #f7f8fdff;
-
 // Period default colors
 $period-red: #f4aeafff;
 $period-teal: #aef4dcff;
