--- a/client/src/scss/partials/_bottom-nav.scss
+++ b/client/src/scss/partials/_bottom-nav.scss
@@ -38,7 +38,7 @@
 
       // Active
       &.active {
-        color: $theme-dark;
+        color: var(--active);
       }
 
       // The <Link> components
